# makepdf

./: .gitignore  _AUDIT_NOTE.md  codex-custom-viz-and-ops.html  input.txt  insights-timeline-view.html  launcher.py  makepdf.spec  pyproject.toml
makepdf/: __init__.py  __main__.py  config.py  exceptions.py  utils.py
makepdf/cli/: app.py
makepdf/core/: __init__.py  accessibility.py  attachments.py  bates.py  compare.py  compressor.py  converter.py  creator.py  cropper.py  editor.py  encryption.py  flatten.py  forms.py  headers_footers.py  image_extractor.py  links.py  markup.py  merger.py  metadata.py  ocr.py  optimizer.py  page_labels.py  redaction.py  signer.py  stamps.py  text_extractor.py  toc.py  watermark.py
makepdf/web/: ai_helpers.py  app.py  auth.py  job_registry.py  shared.py
makepdf/web/routes/: a11y_remediation.py  a11y_route.py  ai_audit.py  ai_classify.py  ai_form_filler.py  ai_results.py  attach_route.py  bates_route.py  cloud_storage.py  compare_route.py  create.py  crop_route.py  ediscovery.py  edit.py  extract.py  flatten_route.py  forms.py  jobs.py  link_route.py  ocr.py  (+14 more)
tests/: conftest.py  test_accessibility.py  test_attachments.py  test_bates.py  test_cli.py  test_cli_new.py  test_compare.py  test_creator.py  test_cropper.py  test_editor.py  test_flatten.py  test_forms.py  test_links.py  test_markup.py  test_merger.py  test_metadata.py  test_optimizer.py  test_page_labels.py  test_redaction.py  test_reorder.py  test_stamps.py  test_text_extractor.py  test_transform.py  test_web.py  test_web_new.py
viz/: TimelineView.js  timeline-view.html
(+26 files in other folders)
